--- a/package.json
+++ b/package.json
@@ -1,18 +1,40 @@
 {
-  "name": "ghost-armstrong",
+  "name": "infinite-realms",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^22.1.0",
+    "@react-native-firebase/auth": "^22.1.0",
+    "@react-native-firebase/firestore": "^22.1.0",
+    "axios": "^1.7.9",
     "expo": "~54.0.29",
+    "expo-build-properties": "~0.14.8",
+    "expo-constants": "~18.0.10",
+    "expo-font": "~14.1.3",
+    "expo-linking": "~8.0.4",
+    "expo-router": "~6.0.19",
+    "expo-secure-store": "~15.2.1",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "2.28.0",
+    "react-native-purchases": "^8.10.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "4.16.0",
+    "react-native-web": "^0.21.2",
+    "ws": "8",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
