--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-router": "~6.0.19",
     "expo-secure-store": "~15.2.1",
     "expo-status-bar": "~3.0.9",
+    "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
