--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-build-properties": "~0.14.8",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.1.3",
+    "expo-haptics": "~15.0.8",
     "expo-linking": "~8.0.4",
     "expo-router": "~6.0.19",
     "expo-secure-store": "~15.2.1",
