--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "test": "jest",
     "build:web": "expo export --platform web",
-    "deploy:staging": "powershell -ExecutionPolicy Bypass -File ./scripts/deploy-staging.ps1"
+    "deploy:staging": "powershell -ExecutionPolicy Bypass -File ./scripts/deploy-staging.ps1",
+    "deploy:firebase": "powershell -ExecutionPolicy Bypass -File ./scripts/deploy-firebase.ps1"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
