--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~54.0.29",
     "expo-build-properties": "~0.14.8",
     "expo-constants": "~18.0.10",
+    "expo-document-picker": "~14.0.8",
     "expo-font": "~14.1.3",
     "expo-haptics": "~15.0.8",
     "expo-linking": "~8.0.4",
