--- a/functions/package.json
+++ b/functions/package.json
@@ -16,10 +16,12 @@
         "node": "20"
     },
     "dependencies": {
+        "@anthropic-ai/sdk": "^0.32.0",
+        "@types/cors": "^2.8.19",
+        "cors": "^2.8.5",
         "firebase-admin": "^12.0.0",
         "firebase-functions": "^5.0.0",
         "openai": "^4.68.0",
-        "@anthropic-ai/sdk": "^0.32.0",
         "zod": "^3.23.8"
     },
     "devDependencies": {
