--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,8 @@
     },
     "dependencies": {
         "@anthropic-ai/sdk": "^0.32.0",
+        "@google-cloud/secret-manager": "^6.1.1",
+        "@google/generative-ai": "^0.24.1",
         "@types/cors": "^2.8.19",
         "cors": "^2.8.5",
         "firebase-admin": "^12.0.0",
