--- a/functions/package.json
+++ b/functions/package.json
@@ -24,6 +24,7 @@
         "firebase-admin": "^12.0.0",
         "firebase-functions": "^5.0.0",
         "openai": "^4.68.0",
+        "stripe": "^20.1.0",
         "zod": "^3.23.8"
     },
     "devDependencies": {
