Fix build issues, icon fonts, and turns display alignment
- Add babel.config.js for Reanimated/Worklets support
- Add hardcoded Firebase config fallbacks for static export
- Fix Firebase service initialization for SSR safety
- Update firebase.json to serve font files correctly (CORS headers)
- Fix icon font loading with CDN preloading in +html.tsx
- Fix TurnsMeter to show consistent turns display
- Remove hardcoded Stripe key from get-stripe-ids.js (use env var)
- Install missing dependencies (expo-asset, react-native-reanimated)

--- a/app.json
+++ b/app.json
@@ -42,7 +42,8 @@
           }
         }
       ],
-      "@react-native-firebase/app"
+      "@react-native-firebase/app",
+      "expo-asset"
     ],
     "experiments": {
       "typedRoutes": true
