--- a/package.json
+++ b/package.json
@@ -14,31 +14,36 @@
     "deploy:firebase": "powershell -ExecutionPolicy Bypass -File ./scripts/deploy-firebase.ps1"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-firebase/app": "^22.1.0",
     "@react-native-firebase/auth": "^22.1.0",
     "@react-native-firebase/firestore": "^22.1.0",
     "axios": "^1.7.9",
-    "expo": "~54.0.29",
-    "expo-build-properties": "~0.14.8",
+    "expo": "~54.0.30",
+    "expo-asset": "~12.0.12",
+    "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.10",
     "expo-document-picker": "~14.0.8",
-    "expo-font": "~14.1.3",
+    "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
-    "expo-linking": "~8.0.4",
-    "expo-router": "~6.0.19",
-    "expo-secure-store": "~15.2.1",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.21",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "2.28.0",
     "react-native-purchases": "^8.10.1",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "4.16.0",
     "react-native-web": "^0.21.2",
+    "react-native-worklets": "0.5.1",
+    "react-native-worklets-core": "^1.6.2",
     "ws": "8",
     "zustand": "^5.0.5"
   },
