--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,10 @@
         "shell": "npm run build && firebase functions:shell",
         "start": "npm run shell",
         "deploy": "firebase deploy --only functions",
-        "logs": "firebase functions:log"
+        "logs": "firebase functions:log",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
     },
     "engines": {
         "node": "20"
@@ -28,7 +31,12 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@firebase/rules-unit-testing": "^5.0.0",
+        "@types/jest": "^30.0.0",
         "@types/node": "^20.0.0",
+        "firebase-functions-test": "^3.4.1",
+        "jest": "^30.2.0",
+        "ts-jest": "^29.4.6",
         "typescript": "^5.4.0"
     },
     "private": true
