--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy:firebase": "powershell -ExecutionPolicy Bypass -File ./scripts/deploy-firebase.ps1"
   },
   "dependencies": {
+    "@3d-dice/dice-box": "^1.1.4",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-firebase/app": "^22.1.0",
@@ -33,8 +34,8 @@
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
     "firebase": "^12.6.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "2.28.0",
     "react-native-purchases": "^8.10.1",
