--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@3d-dice/dice-box": "^1.1.4",
+    "@expo-google-fonts/inter": "^0.4.2",
+    "@expo-google-fonts/outfit": "^0.4.3",
+    "@expo-google-fonts/roboto": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-firebase/app": "^22.1.0",
@@ -23,6 +26,7 @@
     "axios": "^1.7.9",
     "expo": "~54.0.30",
     "expo-asset": "~12.0.12",
+    "expo-blur": "^15.0.8",
     "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.10",
     "expo-document-picker": "~14.0.8",
