--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,32 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 # dependencies
-node_modules/
-
 # Expo
 .expo/
 dist/
 web-build/
 expo-env.d.ts
+
+# Dependencies
+node_modules/
+
+# Environment
+.env.local
+.env
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Misc
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Native
 .kotlin/
@@ -21,16 +40,6 @@ expo-env.d.ts
 # Metro
 .metro-health-check*
 
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
-*.pem
-
-# local env files
 .env*.local
 
 # typescript
@@ -41,6 +50,13 @@ yarn-error.*
 /android
 
 firebase-debug.log
+
+# Build errors and debug files
+build_error*.txt
+export_debug.txt
+export_log.txt
+deploy-log.txt
+functions/firebase-debug.log
 
 # Cloud Functions build artifacts
 functions/lib/
