--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
     "firebase": "^12.6.0",
+    "lz-string": "^1.5.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-native": "0.81.5",
