--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^19.2.3",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "2.28.0",
+    "react-native-paper": "^5.14.5",
     "react-native-purchases": "^8.10.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
